fixing alignment issues

--- a/_sass/project_gallery.scss
+++ b/_sass/project_gallery.scss
@@ -27,7 +27,7 @@
   background: linear-gradient(to top,#A3E9A6,rgba(#A3E9A6, .25));
   color: #303030;
   margin:0;
-  // padding: .4vh;
+  padding: .6vh;
   overflow-x: scroll;
   border-radius: inherit;
   font-size: 1.8vw;
